# ankitunes

./: .gitignore  DEVELOPMENT.md  Makefile  README.md  ankiweb_manifest.json  install_addon  mypy.ini  plan.md  pyproject.toml
.circleci/: config.yml  publish  publish.sh
ankitunes/: __init__.py  col_card_type.py  col_note_type.py  errors.py  load_from_session.py  load_from_session_ui.py  result.py  tuneOverview.py  tuneReviewer.py  tune_overview.py  tune_reviewer.py  util.py  welcome_wizard.py
ankitunes/tunes/: data.py
ankitunes/web/: Makefile  package-lock.json  package.json  tsconfig.json
ankitunes/web/card_template/: Makefile  snowpack.config.js  tsconfig.json
ankitunes/web/card_template/src/: abcjs.d.ts  template.ts
ankitunes/web/src/reviewer_bottom/: reviewer_bottom.ts
tests/: anki_testing.py  conftest.py  data.py  test_ankitunes.py  test_col_note_type.py  utils.py
tests/headless/: test_ankitunes.py  test_col_note_type.py  test_load_from_session.py  test_onboarding.py  test_tune_reviewer.py
tests/headless/migration_tests/: data.py  test_migrations.py
tests/migration_tests/: test_migrations.py
tests/ui/: __init__.py  conftest.py
tests/ui/ui_tests/: data.py  test_fiddle.py  test_load_from_session.py  test_startup.py
tests/ui_tests/: test_startup.py
