[tool.poetry]
name = "ankitunes"
version = "0.1.0"
description = ""
authors = ["Jarrad Whitaker <akdor1154@gmail.com>"]

exclude = ["ankitunes/web/**/*"]
include = ["ankitunes/web/dist/**/*"]

[tool.poetry.dependencies]
python = "^3.8"

# move to dep group with poetry 1.2 is out
requests = {version = "^2.25.1", optional = true, extras = ["publish"]}
mistune = {version = "2.0.0-rc1", optional = true, extras = ["publish"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
aqt = "^2.1.44"
mypy = "^0.812"
pytest-qt = "^4.0.0"
yapf = "^0.31.0"

[tool.poetry.extras]
publish = ["requests", "mistune"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "yapf"
continuation_align_style = "valign-right"
use_tabs = true
SPLIT_BEFORE_FIRST_ARGUMENT = true
DEDENT_CLOSING_BRACKETS = true