[tool.poetry]
name = "ankitunes"
version = "0.1.0"
description = ""
authors = ["Jarrad Whitaker <akdor1154@gmail.com>"]

exclude = ["ankitunes/web/**/*"]
include = ["ankitunes/web/dist/**/*"]

[tool.poetry.dependencies]
python = "^3.8"

# move to dep group with poetry 1.2 is out
requests = {version = "^2.25.1", optional = true, extras = ["publish"]}
mistune = {version = "2.0.0-rc1", optional = true, extras = ["publish"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
aqt = "^2.1.49"
mypy = "^0.942"
pytest-qt = "^4.0.0"
tan = "^20.8.4"

[tool.poetry.extras]
publish = ["requests", "mistune"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version=['py38']
use-tabs=true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
files = ["ankitunes","tests"]
exclude = "ankitunes/web/node_modules/.*"

[[tool.mypy.overrides]]
module = [
	"aqt.gui_hooks",
	"anki.hooks"
]
implicit_reexport = true

[[tool.mypy.overrides]]
module = [
	"pytestqt.*",
	"send2trash"
]
ignore_missing_imports = true
